objects/Security_Incident__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Security Incidents</relationshipLabel>
        <relationshipName>Security_Incidents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Alarm_Keypad_Location__c</fullName>
        <formula>Account__r.Alarm_Keypad_Location__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alarm Keypad Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alarm_Yes_No__c</fullName>
        <formula>text( Account__r.Alarm_Yes_No__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alarm Yes/No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Camera_Count__c</fullName>
        <description>Number of cameras used in the install</description>
        <inlineHelpText>Fill in the amount of cameras used in the install</inlineHelpText>
        <label>Camera Count</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Damaged_Machines__c</fullName>
        <label>Damaged Machines</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SAS 1</fullName>
                </value>
                <value>
                    <fullName>SAS 2</fullName>
                </value>
                <value>
                    <fullName>SAS 3</fullName>
                </value>
                <value>
                    <fullName>SAS 4</fullName>
                </value>
                <value>
                    <fullName>SAS 5</fullName>
                </value>
                <value>
                    <fullName>SAS 6</fullName>
                </value>
                <value>
                    <fullName>SAS 7</fullName>
                </value>
                <value>
                    <fullName>SAS 8</fullName>
                </value>
                <value>
                    <fullName>SAS 9</fullName>
                </value>
                <value>
                    <fullName>SAS 10</fullName>
                </value>
                <value>
                    <fullName>Redemption</fullName>
                </value>
                <value>
                    <fullName>Amusement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_of_Incident__c</fullName>
        <label>Date of Incident</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Funds_Stolen__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Funds Stolen</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Incident_Notes__c</fullName>
        <label>Incident Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incident_Type__c</fullName>
        <label>Incident Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Assist to Police Agency</fullName>
                </value>
                <value>
                    <fullName>Attempted Burglary</fullName>
                </value>
                <value>
                    <fullName>Attempted Theft</fullName>
                </value>
                <value>
                    <fullName>Burglary</fullName>
                </value>
                <value>
                    <fullName>Criminal Damage</fullName>
                </value>
                <value>
                    <fullName>Damage</fullName>
                </value>
                <value>
                    <fullName>Location Fire</fullName>
                </value>
                <value>
                    <fullName>Video Recording Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location_of_NVR__c</fullName>
        <description>Where the NVR can be found at the location</description>
        <label>Location of NVR</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SAS 1</fullName>
                </value>
                <value>
                    <fullName>SAS 2</fullName>
                </value>
                <value>
                    <fullName>SAS 3</fullName>
                </value>
                <value>
                    <fullName>SAS 4</fullName>
                </value>
                <value>
                    <fullName>SAS 5</fullName>
                </value>
                <value>
                    <fullName>SAS 6</fullName>
                </value>
                <value>
                    <fullName>SAS 7</fullName>
                </value>
                <value>
                    <fullName>SAS 8</fullName>
                </value>
                <value>
                    <fullName>SAS 9</fullName>
                </value>
                <value>
                    <fullName>SAS 10</fullName>
                </value>
                <value>
                    <fullName>Redemption Terminal</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Models_of_Cameras__c</fullName>
        <description>Camera models installed at the location</description>
        <label>Model of Camera</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lorex</fullName>
                </value>
                <value>
                    <fullName>ADI</fullName>
                </value>
                <value>
                    <fullName>Dahua</fullName>
                </value>
                <value>
                    <fullName>Hanwha</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owner_Notified_by_RM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Was the owner of the location notified by the RM</description>
        <label>Owner Notified by RM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Police_Notified__c</fullName>
        <label>Police Notified?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Post_Alarm_Installation__c</fullName>
        <label>Post Alarm Installation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Restitution_Payment_Amount__c</fullName>
        <label>Restitution Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Restitution_for_Equipment_Damages__c</fullName>
        <label>Restitution for Equipment Damages</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Security_Cameras__c</fullName>
        <formula>text(Account__r.Security_Cameras__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Security Cameras</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Region__c</fullName>
        <formula>Account__r.Service_Territory__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_of_Incident__c</fullName>
        <label>Time of Incident</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Total_Damages__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Damages</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Loss__c</fullName>
        <formula>Funds_Stolen__c +  Total_Damages__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Loss</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type_of_Alert__c</fullName>
        <label>Type of Alert</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Back Office</fullName>
                </value>
                <value>
                    <fullName>Call In</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Security Incident</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Security_Camera_Installs</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Security_Incident__c.IGB_Camera_Survey</value>
        </filters>
        <label>Security Camera Installs</label>
    </listViews>
    <nameField>
        <displayFormat>S-{00000}</displayFormat>
        <label>Security Incident Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Security Incidents</pluralLabel>
    <recordTypes>
        <fullName>IGB_Camera_Survey</fullName>
        <active>true</active>
        <description>Location Survey for IGB Camera Project</description>
        <label>IGB Camera Survey</label>
    </recordTypes>
    <recordTypes>
        <fullName>Security_Incident</fullName>
        <active>true</active>
        <description>A security incident that occurred at a location</description>
        <label>Security Incident</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>